fix spacing

--- a/css/stylehomepage.css
+++ b/css/stylehomepage.css
@@ -245,7 +245,7 @@ hr {
         width: 80%;
     }
     .picwrapper {
-        padding-bottom: 13px;
+        padding-bottom: 23px;
     }
     .middle {
         opacity: 1;
